Adapting aldebaran test to internal secret + fixing CSRF handling in antares